--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
   "name": "@hurtigruten/svelte-table",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple, sortable svelte table component",
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/svelte": "^3.0.3",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.26.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "jest": "^26.6.3",
     "rollup": "^2.47.0",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.38.2",
-    "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "svelte-jester": "^1.5.0"
   },
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -cw"
+    "dev": "rollup -cw",
+    "test": "jest src"
   },
   "author": "Hurtigruten",
   "license": "MIT"
