Fix header class and include d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
-    "strictNullChecks": true
+    "declaration": true,
+    "declarationDir": "./dist",
+    "module": "es6",
+    "noImplicitAny": true,
+    "outDir": "./dist",
+    "target": "es5"
   },
-  "files": [
-    "src/index.d.ts"
-  ]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": ["node_modules"]
 }
