--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "A simple, sortable svelte table component",
   "svelte": "src/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.es.js",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -19,9 +20,11 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "jest": "^26.6.3",
     "rollup": "^2.47.0",
+    "rollup-plugin-dts": "^3.0.1",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.38.2",
-    "svelte-jester": "^1.5.0"
+    "svelte-jester": "^1.5.0",
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "build": "rollup -c",
