feature: develop new pagination util class, with support for async pagination

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -cw",
-    "test": "jest src"
+    "test": "jest src",
+    "test:watch": "jest src --watchAll"
   },
   "author": "Hurtigruten",
   "license": "MIT"
