--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hurtigruten/svelte-table",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A simple, sortable svelte table component",
   "svelte": "src/index.js",
   "module": "dist/index.es.js",
@@ -8,23 +8,23 @@
   "types": "dist/index.d.ts",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@testing-library/jest-dom": "^5.12.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/svelte": "^3.0.3",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.27.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "jest": "^26.6.3",
-    "rollup": "^2.50.6",
-    "rollup-plugin-dts": "^3.0.2",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "jest": "^27.3.1",
+    "rollup": "^2.60.1",
+    "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-svelte": "^7.1.0",
-    "svelte": "^3.38.2",
-    "svelte-jester": "^1.7.0",
-    "typescript": "^4.3.2"
+    "svelte": "^3.44.2",
+    "svelte-jester": "^2.1.5",
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "build": "rollup -c",
@@ -33,5 +33,8 @@
     "test:watch": "jest src --watchAll"
   },
   "author": "Hurtigruten",
-  "license": "MIT"
+  "license": "MIT",
+  "release": {
+    "branches": ["main", "next"]
+  }
 }
