--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -36,7 +36,7 @@ jobs:
 
   slack:
     needs: publish-npm
-    runs-n: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: 8398a7/action-slack@v3
         with:
