--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@hurtigruten/svelte-table",
   "version": "2.0.0",
   "description": "A simple, sortable svelte table component",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hurtigruten/svelte-table.git"
+  },
   "svelte": "src/index.js",
   "module": "dist/index.es.js",
   "main": "dist/index.js",
@@ -24,17 +28,22 @@
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.44.2",
     "svelte-jester": "^2.1.5",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "semantic-release": "^18.0.0"
   },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -cw",
     "test": "jest src",
-    "test:watch": "jest src --watchAll"
+    "test:watch": "jest src --watchAll",
+    "semantic-release": "semantic-release"
   },
   "author": "Hurtigruten",
   "license": "MIT",
   "release": {
-    "branches": ["main", "next"]
+    "branches": [
+      "main",
+      "next"
+    ]
   }
 }
