--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -7,10 +7,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-    inputs:
-      name:
-        description: 'Publish manually'
-        required: false
 
 jobs:
   build:
@@ -34,10 +30,11 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - uses: codfish/semantic-release-action@v1
+        id: semantic
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: npm run semantic-release
 
   slack:
     needs: publish-npm
