--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.44.2",
     "svelte-jester": "^2.1.5",
-    "typescript": "^4.5.2",
-    "semantic-release": "^18.0.0"
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "build": "rollup -c",
