--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hurtigruten/svelte-table",
-  "version": "2.0.0",
+  "version": "0.0.0-development",
   "description": "A simple, sortable svelte table component",
   "repository": {
     "type": "git",
