Fix pages links

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-cayman
+title: svelte-table
+tagline: A simple, sortable svelte table component
+author:
+  name: Hurtigruten
+  url: https://hurtigruten.com
