--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   "types": "dist/index.d.ts",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.1.1",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/svelte": "^3.0.3",
-    "babel-jest": "^27.4.5",
-    "eslint": "^7.32.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "jest": "^27.4.5",
-    "rollup": "^2.61.1",
-    "rollup-plugin-dts": "^4.0.1",
-    "rollup-plugin-svelte": "^7.1.0",
-    "svelte": "^3.44.3",
-    "svelte-jester": "^2.1.5",
-    "typescript": "^4.5.4"
+    "@babel/core": "7.16.7",
+    "@babel/preset-env": "7.16.8",
+    "@rollup/plugin-commonjs": "21.0.1",
+    "@rollup/plugin-node-resolve": "13.1.3",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/svelte": "3.0.3",
+    "babel-jest": "27.4.6",
+    "eslint": "7.32.0",
+    "eslint-config-standard-with-typescript": "21.0.1",
+    "eslint-plugin-svelte3": "3.4.0",
+    "jest": "27.4.7",
+    "rollup": "2.63.0",
+    "rollup-plugin-dts": "4.1.0",
+    "rollup-plugin-svelte": "7.1.0",
+    "svelte": "3.46.1",
+    "svelte-jester": "2.1.5",
+    "typescript": "4.5.4"
   },
   "scripts": {
     "build": "rollup -c",
