--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,6 @@
     "outDir": "./dist",
     "target": "es6"
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
