(fix): Cleanup jest and tests

--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "@hurtigruten/svelte-table",
   "version": "0.0.0-development",
   "description": "A simple, sortable svelte table component",
-  "keywords": ["svelte", "sveltejs", "table"],
+  "keywords": [
+    "svelte",
+    "sveltejs",
+    "table"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/hurtigruten/svelte-table.git"
   },
   "bugs": {
-     "url": "https://github.com/hurtigruten/svelte-table/issues"
+    "url": "https://github.com/hurtigruten/svelte-table/issues"
   },
   "svelte": "src/index.js",
   "module": "dist/index.es.js",
@@ -27,6 +31,7 @@
     "eslint-config-standard-with-typescript": "22.0.0",
     "eslint-plugin-svelte3": "4.0.0",
     "jest": "28.1.2",
+    "jest-environment-jsdom": "28.1.2",
     "rollup": "2.76.0",
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-svelte": "7.1.0",
