--- a/package.json
+++ b/package.json
@@ -1,61 +1,61 @@
 {
-  "name": "@hurtigruten/svelte-table",
-  "version": "0.0.0-development",
-  "description": "A simple, sortable svelte table component",
-  "keywords": [
-    "svelte",
-    "sveltejs",
-    "table"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hurtigruten/svelte-table.git"
-  },
-  "bugs": {
-    "url": "https://github.com/hurtigruten/svelte-table/issues"
-  },
-  "svelte": "src/index.js",
-  "module": "dist/index.es.js",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "devDependencies": {
-    "@babel/core": "7.18.6",
-    "@babel/preset-env": "7.18.6",
-    "@rollup/plugin-commonjs": "22.0.1",
-    "@rollup/plugin-node-resolve": "13.3.0",
-    "@semantic-release/git": "10.0.1",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/svelte": "3.1.3",
-    "babel-jest": "28.1.2",
-    "eslint": "8.19.0",
-    "eslint-config-standard-with-typescript": "22.0.0",
-    "eslint-plugin-svelte3": "4.0.0",
-    "jest": "28.1.2",
-    "jest-environment-jsdom": "28.1.2",
-    "rollup": "2.76.0",
-    "rollup-plugin-dts": "4.2.2",
-    "rollup-plugin-svelte": "7.1.0",
-    "semantic-release": "19.0.3",
-    "svelte": "3.49.0",
-    "svelte-jester": "2.3.2",
-    "typescript": "4.7.4"
-  },
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -cw",
-    "test": "jest src",
-    "test:watch": "jest src --watchAll",
-    "semantic-release": "semantic-release"
-  },
-  "author": "Hurtigruten",
-  "license": "MIT",
-  "release": {
-    "branches": [
-      "main",
-      "next"
-    ],
-    "plugins": [
-      "@semantic-release/git"
-    ]
-  }
+	"name": "@hurtigruten/svelte-table",
+	"version": "0.0.0-development",
+	"description": "A simple, sortable svelte table component",
+	"keywords": [
+		"svelte",
+		"sveltejs",
+		"table"
+	],
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build && npm run package",
+		"preview": "vite preview",
+		"package": "svelte-kit sync && svelte-package && publint",
+		"prepublishOnly": "npm run package",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"files": [
+		"dist"
+	],
+	"peerDependencies": {
+		"svelte": "^3.54.0"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/package": "^2.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"publint": "^0.1.9",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.2.0",
+		"vitest": "^0.25.3"
+	},
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"type": "module",
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/svelte": "^3.2.2",
+		"jsdom": "^21.1.1"
+	}
 }
