test: :white_check_mark: add tests

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
-		"test": "vitest",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"package": "svelte-kit sync && svelte-package && publint",
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
