--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "@hurtigruten/svelte-table",
 	"version": "0.0.0-development",
+	"author": "Hurtigruten",
+	"license": "MIT",
 	"description": "A simple, sortable svelte table component",
 	"keywords": [
 		"svelte",
@@ -19,7 +21,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"semantic-release": "semantic-release"
 	},
 	"exports": {
 		".": {
@@ -34,6 +37,7 @@
 		"svelte": "^3.54.0"
 	},
 	"devDependencies": {
+		"@semantic-release/git": "10.0.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@sveltejs/package": "^2.0.0",
@@ -45,6 +49,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"publint": "^0.1.9",
+		"semantic-release": "21.0.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
@@ -54,10 +59,22 @@
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"bugs": {
+		"url": "https://github.com/hurtigruten/svelte-table/issues"
+	},
 	"type": "module",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/svelte": "^3.2.2",
 		"jsdom": "^21.1.1"
+	},
+	"release": {
+		"branches": [
+			"main",
+			"next"
+		],
+		"plugins": [
+			"@semantic-release/git"
+		]
 	}
 }
